[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xl2times"]

[project]
name = "xl2times"
version = "0.1.0"
description = 'An open source tool to convert Excel input files for TIMES models to the DD format accepted by GAMS'
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "GitPython >= 3.1.31, < 3.2",
    "more-itertools",
    "openpyxl >= 3.0, < 3.1",
    "pandas >= 2.1",
    "pyarrow",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "tabulate",
    "pytest",
    "pytest-cov"
]

[project.urls]
Documentation = "https://github.com/etsap-TIMES/xl2times#readme"
Issues = "https://github.com/etsap-TIMES/xl2times/issues"
Source = "https://github.com/etsap-TIMES/xl2times"

[project.scripts]
xl2times = "xl2times.__main__:main"

[tool.pytest.ini_options]
# don't print runtime warnings
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning", "ignore::FutureWarning"]
# show output, print test coverage report
addopts = '-s --durations=0 --durations-min=5.0 --tb=native --cov-report term --cov-report html --cov=xl2times --cov=utils'
